--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
 							<a
 								href="./index.html"
 								class="nav-list__link nav-list__link--active"
-								>Projects</a
 							>
+								Projects
+							</a>
 						</li>
 						<li class="nav-list__item">
 							<a href="./skills.html" class="nav-list__link">Skills</a>
@@ -34,8 +35,8 @@
 		<header class="header">
 			<div class="header__wrapper">
 				<h1 class="header__title">
-					<strong>Hi, my name is <em>Ivan</em></strong
-					><br />
+					<strong>Hi, my name is <em>Ivan</em></strong>
+					<br />
 					a frontend developer
 				</h1>
 				<div class="header__text">
@@ -49,13 +50,62 @@
 				<h2 class="title-1">Projects</h2>
 				<ul class="projects">
 					<li class="project">
-						<img src="./img/projects/01.jpg" alt="Project img" class="project__img">
+						<a href="./project-page.html"><img
+							src="./img/projects/01.jpg"
+							alt="Project img"
+							class="project__img"
+						/>
+						<h3 class="project__title">Gaming streaming portal</h3></a>
 					</li>
-					<li class="project"></li>
-					<li class="project"></li>
-					<li class="project"></li>
-					<li class="project"></li>
-					<li class="project"></li>
+					<li class="project">
+						<a href="./project-page.html"><img
+							src="./img/projects/02.jpg"
+							alt="Project img"
+							class="project__img"
+						/>
+						<h3 class="project__title">Video service</h3>
+						</a>
+					</li>
+					<li class="project">
+						<a href="./project-page.html">
+							<img
+								src="./img/projects/03.jpg"
+								alt="Project img"
+								class="project__img"
+							/>
+							<h3 class="project__title">Video portal</h3>
+						</a>
+					</li>
+					<li class="project">
+						<a href="./project-page.html">
+							<img
+								src="./img/projects/04.jpg"
+								alt="Project img"
+								class="project__img"
+							/>
+							<h3 class="project__title">Dating app</h3>
+						</a>
+					</li>
+					<li class="project">
+						<a href="./project-page.html">
+							<img
+								src="./img/projects/05.jpg"
+								alt="Project img"
+								class="project__img"
+							/>
+							<h3 class="project__title">Landing</h3>
+						</a>
+					</li>
+					<li class="project">
+						<a href="./project-page.html">
+							<img
+								src="./img/projects/06.jpg"
+								alt="Project img"
+								class="project__img"
+							/>
+							<h3 class="project__title">Gaming community</h3>
+						</a>
+					</li>
 				</ul>
 			</div>
 		</main>
