--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
 				<a href="#!" class="btn">Download CV</a>
 			</div>
 		</header>
-		<main class="section">
+		<main class="section ">
 			<div class="container">
 				<h2 class="title-1">Projects</h2>
 				<ul class="projects">
 					<li class="project">
-						<a href="./project-page.html"><img
+						<a href="./project-page1.html"><img
 							src="./img/projects/01.jpg"
 							alt="Project img"
 							class="project__img"
@@ -58,7 +58,7 @@
 						<h3 class="project__title">Gaming streaming portal</h3></a>
 					</li>
 					<li class="project">
-						<a href="./project-page.html"><img
+						<a href="./project-page2.html"><img
 							src="./img/projects/02.jpg"
 							alt="Project img"
 							class="project__img"
@@ -67,7 +67,7 @@
 						</a>
 					</li>
 					<li class="project">
-						<a href="./project-page.html">
+						<a href="./project-page3.html">
 							<img
 								src="./img/projects/03.jpg"
 								alt="Project img"
@@ -77,7 +77,7 @@
 						</a>
 					</li>
 					<li class="project">
-						<a href="./project-page.html">
+						<a href="./project-page4.html">
 							<img
 								src="./img/projects/04.jpg"
 								alt="Project img"
@@ -87,7 +87,7 @@
 						</a>
 					</li>
 					<li class="project">
-						<a href="./project-page.html">
+						<a href="./project-page5.html">
 							<img
 								src="./img/projects/05.jpg"
 								alt="Project img"
@@ -97,7 +97,7 @@
 						</a>
 					</li>
 					<li class="project">
-						<a href="./project-page.html">
+						<a href="./project-page6.html">
 							<img
 								src="./img/projects/06.jpg"
 								alt="Project img"
