created page Skills

--- a/skills.html
+++ b/skills.html
@@ -16,13 +16,13 @@
 						<li class="nav-list__item">
 							<a
 								href="./index.html"
-								class="nav-list__link nav-list__link--active"
+								class="nav-list__link "
 							>
 								Projects
 							</a>
 						</li>
 						<li class="nav-list__item">
-							<a href="./skills.html" class="nav-list__link">Skills</a>
+							<a href="./skills.html" class="nav-list__link nav-list__link--active">Skills</a>
 						</li>
 						<li class="nav-list__item">
 							<a href="./contacts.html" class="nav-list__link">Contacts</a>
@@ -35,6 +35,22 @@
 		<main class="section">
 			<div class="container">
 				<h1 class="title-1">Skills</h1>
+
+				<ul class="content-list">
+					<li class="content-list__item">
+						<h2 class="title-2">Frontend</h2>
+						<p>JavaScript, TypeScript, ReactJS, Angular, Redux, HTML, CSS, NPM, BootStrap, MaterialUI, Yarn, TailwindCSS, StyledComponents</p>
+					</li>
+					<li class="content-list__item">
+						<h2 class="title-2">Backend</h2>
+						<p>NodeJS, MySQL, MongoDB, PHP, Laravel</p>
+					
+					</li>
+				</ul>
+              
+			
+
+
 			</div>
 		</main>
 		<footer class="footer">
