--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
 			<div class="container">
 				<div class="nav-row">
 					<a href="./ind" class="logo"><strong>Freelancer</strong> portfolio</a>
+
+					<button class="dark-mode-btn">
+						<img src="./img/icons/sun.svg" alt="light mode" class="dark-mode-btn__icon">
+						<img src="./img/icons/moon.svg" alt="dark mode" class="dark-mode-btn__icon">
+					</button>
+
 					<ul class="nav-list">
 						<li class="nav-list__item">
 							<a
@@ -45,25 +51,28 @@
 				<a href="#!" class="btn">Download CV</a>
 			</div>
 		</header>
-		<main class="section ">
+		<main class="section">
 			<div class="container">
 				<h2 class="title-1">Projects</h2>
 				<ul class="projects">
 					<li class="project">
-						<a href="./project-page1.html"><img
-							src="./img/projects/01.jpg"
-							alt="Project img"
-							class="project__img"
-						/>
-						<h3 class="project__title">Gaming streaming portal</h3></a>
+						<a href="./project-page1.html"
+							><img
+								src="./img/projects/01.jpg"
+								alt="Project img"
+								class="project__img"
+							/>
+							<h3 class="project__title">Gaming streaming portal</h3></a
+						>
 					</li>
 					<li class="project">
-						<a href="./project-page2.html"><img
-							src="./img/projects/02.jpg"
-							alt="Project img"
-							class="project__img"
-						/>
-						<h3 class="project__title">Video service</h3>
+						<a href="./project-page2.html"
+							><img
+								src="./img/projects/02.jpg"
+								alt="Project img"
+								class="project__img"
+							/>
+							<h3 class="project__title">Video service</h3>
 						</a>
 					</li>
 					<li class="project">
@@ -114,24 +123,28 @@
 				<div class="footer__wrapper">
 					<ul class="social">
 						<li class="social__item">
-							<a href="#!"><img src="./img/icons/vk.svg" alt="Link"></a>
+							<a href="#!"><img src="./img/icons/vk.svg" alt="Link" /></a>
 						</li>
 						<li class="social__item">
-							<a href="#!"><img src="./img/icons/instagram.svg" alt="Link"></a>
+							<a href="#!"
+								><img src="./img/icons/instagram.svg" alt="Link"
+							/></a>
 						</li>
 						<li class="social__item">
-							<a href="#!"><img src="./img/icons/twitter.svg" alt="Link"></a>
+							<a href="#!"><img src="./img/icons/twitter.svg" alt="Link" /></a>
 						</li>
 						<li class="social__item">
-							<a href="#!"><img src="./img/icons/gitHub.svg" alt="Link"></a>
+							<a href="#!"><img src="./img/icons/gitHub.svg" alt="Link" /></a>
 						</li>
 						<li class="social__item">
-							<a href="#!"><img src="./img/icons/linkedIn.svg" alt="Link"></a>
+							<a href="#!"><img src="./img/icons/linkedIn.svg" alt="Link" /></a>
 						</li>
 					</ul>
 					<div class="copyright"><p>© 2022 frontend-dev.com</p></div>
 				</div>
 			</div>
 		</footer>
+
+		<script src="./js/main.js"></script>
 	</body>
 </html>
