--- a/project-page1.html
+++ b/project-page1.html
@@ -12,6 +12,10 @@
 			<div class="container">
 				<div class="nav-row">
 					<a href="./ind" class="logo"><strong>Freelancer</strong> portfolio</a>
+					<button class="dark-mode-btn">
+						<img src="./img/icons/sun.svg" alt="light mode" class="dark-mode-btn__icon">
+						<img src="./img/icons/moon.svg" alt="dark mode" class="dark-mode-btn__icon">
+					</button>
 					<ul class="nav-list">
 						<li class="nav-list__item">
 							<a
@@ -77,5 +81,6 @@
 				</div>
 			</div>
 		</footer>
+		<script src="./js/main.js"></script>
 	</body>
 </html>
