--- a/contacts.html
+++ b/contacts.html
@@ -11,19 +11,14 @@
 		<nav class="nav">
 			<div class="container">
 				<div class="nav-row">
-					<a href="./ind" class="logo"><strong>Freelancer</strong> portfolio</a>
+					<a href="./index.html" class="logo"><strong>Freelancer</strong> portfolio</a>
 					<button class="dark-mode-btn">
 						<img src="./img/icons/sun.svg" alt="light mode" class="dark-mode-btn__icon">
 						<img src="./img/icons/moon.svg" alt="dark mode" class="dark-mode-btn__icon">
 					</button>
 					<ul class="nav-list">
 						<li class="nav-list__item">
-							<a
-								href="./index.html
-								class="nav-list__link "
-							>
-								Projects
-							</a>
+							<a href="./index.html" class="nav-list__link" >Projects</a>
 						</li>
 						<li class="nav-list__item">
 							<a href="./skills.html" class="nav-list__link ">Skills</a>
