--- a/project-page1.html
+++ b/project-page1.html
@@ -11,7 +11,7 @@
 		<nav class="nav">
 			<div class="container">
 				<div class="nav-row">
-					<a href="./ind" class="logo"><strong>Freelancer</strong> portfolio</a>
+					<a href="./index.html" class="logo"><strong>Freelancer</strong> portfolio</a>
 					<button class="dark-mode-btn">
 						<img src="./img/icons/sun.svg" alt="light mode" class="dark-mode-btn__icon">
 						<img src="./img/icons/moon.svg" alt="dark mode" class="dark-mode-btn__icon">
@@ -49,7 +49,7 @@
 						<p>Skills: React, Node.js, MongoDB</p>
 					</div>
 					<a href="https://github.com/IvanBanifatsyeu" class="btn-outline"
-						><img src="./img/icons/gitHub-black.svg" alt="icon-gitHub" />GitHub
+						><img src="./img/icons/gitHub-black.svg"  alt="icon-gitHub" />GitHub
 						repo</a
 					>
 				</div>
