--- a/project-page3.html
+++ b/project-page3.html
@@ -11,7 +11,7 @@
 		<nav class="nav">
 			<div class="container">
 				<div class="nav-row">
-					<a href="./ind" class="logo"><strong>Freelancer</strong> portfolio</a>
+					<a href="./index.html" class="logo"><strong>Freelancer</strong> portfolio</a>
 					<button class="dark-mode-btn">
 						<img src="./img/icons/sun.svg" alt="light mode" class="dark-mode-btn__icon">
 						<img src="./img/icons/moon.svg" alt="dark mode" class="dark-mode-btn__icon">
